# debate_duel

./: README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
debate_duel/: __main__.py
debate_duel/agents/: judge.py  judge_api.py  swarm.py  swarm_api.py  team_swarm.py
debate_duel/agents/judge/: __main__.py
debate_duel/agents/swarm_a/: __main__.py
debate_duel/agents/swarm_b/: __main__.py
debate_duel/agents/team_debater/: __init__.py  client.py  main.py  manager.py  printer.py
debate_duel/agents/team_debater/agents/: __init__.py  planner.py  researcher.py  strategist.py  verifier.py  writer.py
debate_duel/arena/: __main__.py  api.py  elo.py  orchestrator.py
debate_duel/settings/: constants.py
debate_duel/shared/: schemas.py
docker/arena/: Dockerfile
docker/judge/: Dockerfile
docker/swarm_a/: Dockerfile
docker/swarm_b/: Dockerfile
examples/: __init__.py  client.py
