[project]
name = "debate-duel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "openai>=1.72.0",
    "openai-agents>=0.0.9",
    "pydantic>=2.11.3",
    "uvicorn>=0.34.0",
]
